overflow-x hidden to prevent scroll

--- a/src/index.css
+++ b/src/index.css
@@ -41,11 +41,13 @@ body {
   margin: 0;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   box-sizing: border-box;
+  cursor: pointer;
+  overflow-x: hidden;
 }
 
 h2 {
